@@ -388,7 +388,6 @@
   <block id="19761722f9e779bd2a70fef96c24a1bc" category="paragraph">Workload Factory pubblica la knowledge base. Nella pagina dei dettagli della knowledge base, lo stato cambia da *non pubblicato* a *pubblicato.*</block>
   <block id="5e92f6a356303934a45930f0e541c6b1" category="paragraph">Ora è possibile ottenere dettagli sull'endpoint unico per la knowledge base.</block>
   <block id="004faa273ca0b2383f0f12b8850c493b" category="list-text">Accanto allo stato pubblicato, selezionare *Visualizza*.</block>
-  <block id="d1f4efe2fd3a800f4b008e172439fe85" category="paragraph">Vengono visualizzati i dettagli su come accedere alla knowledge base utilizzando l'API workload Factory.</block>
   <block id="9de2775e528dfff9dd9666885c222272" category="list-text">Dalla finestra di dialogo *Visualizza informazioni pubblicate*, copiare gli endpoint API che è possibile utilizzare per integrare la knowledge base con un'applicazione.</block>
   <block id="7495d9f71402d3b1d20f08bd19ac6562" category="inline-link">Documentazione API</block>
   <block id="2cb94eb0648b9f93f300ea0aff833f95" category="paragraph">Per ulteriori informazioni sugli endpoint API, andare al<block ref="c0a9aa55ed57e2e15b2d20baa6a6e023" category="inline-link-rx"></block> e selezionare *ai &gt; External*.</block>
@@ -398,7 +397,6 @@
   <block id="06c2cea18679d64399783748fa367bdd" category="inline-image-macro">Uno</block>
   <block id="e16edd708081c06a9c8bdef1486a94b4" category="inline-link-macro">Configura il tuo ambiente per soddisfare i requisiti Genai</block>
   <block id="0b0e916064e065ab12e1db6735832ef0" category="paragraph-title"><block ref="58f667aaf05f87159670e12bd9bc076b" category="inline-image-macro-rx" type="image"></block> <block ref="d4a51aa0811f51e3206f49b62f46f1ef" category="inline-link-macro-rx"></block></block>
-  <block id="926f216b1b078ff9ce47e61e22932514" category="paragraph">Avrai bisogno delle credenziali AWS per implementare l'infrastruttura AWS, un file system FSX per ONTAP implementato e rilevato, l'elenco delle origini dei dati che desideri integrare nella tua knowledge base, l'accesso al servizio Amazon Bedrock ai e altro ancora.</block>
   <block id="aada29daee1d64ed0fe907043855cb7e" category="inline-image-macro">Due</block>
   <block id="36ec882c51ea2d7689f78bed44b7fdaa" category="inline-link-macro">Identificare il file system FSX per ONTAP che contiene le origini dati</block>
   <block id="cc9cd1c7d0a54d3fe49ca467804963fb" category="paragraph-title"><block ref="54f425ce8d89f4ed6b8a546561af5d60" category="inline-image-macro-rx" type="image"></block> <block ref="7206191241f03719b7415c03564b4c6e" category="inline-link-macro-rx"></block></block>
@@ -539,8 +537,17 @@
   <block id="0adc03eac86772ad2c75c8f140be417e" category="sidebar">Conoscenza e supporto</block>
   <block id="3163a16fc98aa29c5fea8b61c62bb459" category="paragraph">L'utilizzo della funzionalità GenAI di workload Factory è gratuito.</block>
   <block id="a46c34e822b00eb49125943300225ec1" category="summary">Dopo aver creato la knowledge base e verificato il chatbot, è possibile configurare l'applicazione che consentirà agli utenti di eseguire query sul chatbot.</block>
-  <block id="4c096c170a3ae328a9df5fb19871a9a7" category="doc">Crea un'applicazione basata sulla knowledge base di FSX per ONTAP</block>
   <block id="3034501b6830f6e24b0e219fa3565ffb" category="inline-link">Scopri come creare un'applicazione ai basata su RAG in FSX per ONTAP</block>
   <block id="cddb505028d2d2c7026aad1d17c19a05" category="paragraph"><block ref="cddb505028d2d2c7026aad1d17c19a05" category="inline-link-rx"></block></block>
   <block id="53b343f4a880bcff3b258324a35744ff" category="sidebar">Crea un'applicazione ai basata su RAG</block>
+  <block id="da1fd32e4f4851fbf4922d1c55e8fcc0" category="list-text">Nella pagina dell'inventario delle Knowledge base, selezionare la knowledge base per la quale si desidera attivare l'autenticazione.</block>
+  <block id="d71d72ee7bc5c79bade09f02715592c3" category="paragraph">L'autenticazione per la knowledge base è ora attiva ed è possibile utilizzare gli endpoint API per interagire con la knowledge base e integrare la knowledge base con un'applicazione chatbot.</block>
+  <block id="c83d7c23906c063b64dd22d30483cb24" category="list-text">Amazon Bedrock è configurato per inviare i registri ad Amazon CloudWatch Logs, utilizzando un gruppo di registri con il prefisso<block ref="26245dda4fa653114e9a41956171489d" prefix=" " category="inline-code"></block>.</block>
+  <block id="6fbe5ae14d71eb3abafcfce8f7fe977a" category="inline-link">ID dell'account BlueXP</block>
+  <block id="af270465b477b731bafe1e4859956cc4" category="list-text">Il motore GenAI è configurato per inviare i registri ad Amazon CloudWatch Logs, utilizzando un gruppo di log con il nome<block ref="267ed14c989ee7da1da6b5683a1ba205" prefix=" " category="inline-code"></block>, dove<block ref="44014fe9a7dd0d34b59279b9206b84b3" prefix=" " category="inline-code"></block> è<block ref="bffdd6286177ca86f99ccefe410268a2" category="inline-link-rx"></block> per l'utente corrente.</block>
+  <block id="b3ec171bb9a8cc7c009e2caf4d945535" category="paragraph">Vengono visualizzati i dettagli su come accedere alla knowledge base utilizzando l'API workload Factory.</block>
+  <block id="f48c3e82e3f3b9cc782fe1277e362ec5" category="paragraph">Avrai bisogno delle credenziali AWS per implementare l'infrastruttura AWS, un file system FSX per ONTAP implementato e rilevato, l'elenco delle origini dati che desideri integrare nella tua knowledge base, l'accesso al servizio Amazon Bedrock ai e altro ancora.</block>
+  <block id="691e71734464aaf43017f5b033e54559" category="section-title">4 agosto 2024</block>
+  <block id="ec7827c2237ae7b863c9ba93b519cbc1" category="section-title">Integrazione di Amazon CloudWatch Logs</block>
+  <block id="64c1dd8cb5f86710c3293cc9807760fb" category="paragraph">I carichi di lavoro ai generativi sono ora integrati con Amazon CloudWatch Logs, consentendo di monitorare i file di log dei carichi di lavoro ai generici.</block>
 </blocks>
