@@ -15,7 +15,7 @@ Inizia a creare una knowledge base utilizzando i dati della tua organizzazione p
 
 .image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-1.png["Uno"] link:requirements.html["Configura il tuo ambiente per soddisfare i requisiti Genai"]
 [role="quick-margin-para"]
-Avrai bisogno delle credenziali AWS per implementare l'infrastruttura AWS, un file system FSX per ONTAP implementato e rilevato, l'elenco delle origini dei dati che desideri integrare nella tua knowledge base, l'accesso al servizio Amazon Bedrock ai e altro ancora.
+Avrai bisogno delle credenziali AWS per implementare l'infrastruttura AWS, un file system FSX per ONTAP implementato e rilevato, l'elenco delle origini dati che desideri integrare nella tua knowledge base, l'accesso al servizio Amazon Bedrock ai e altro ancora.
 
 .image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-2.png["Due"] link:identify-data-sources.html["Identificare il file system FSX per ONTAP che contiene le origini dati"]
 [role="quick-margin-para"]
